--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sketch-hq/sketch-lint-ruleset-core",
   "description": "The core sketch-lint ruleset",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "license": "MIT",
   "repository": "github:sketch-hq/sketch-lint-ruleset-core",
   "main": "dist/cjs/index",
@@ -17,8 +17,8 @@
   ],
   "scripts": {
     "build": "rm -rf ./dist && yarn build:sketch && yarn build:node",
-    "build:sketch": "yarn webpack --config webpack.sketch.js",
-    "build:node": "yarn webpack --config webpack.node.js",
+    "build:sketch": "webpack --config webpack.sketch.js",
+    "build:node": "tsc --project tsconfig.node.json",
     "package-tarball": "yarn build && yarn pack --filename=sketch-lint-ruleset-core-$(node -p -e \"require('./package.json').version\").tgz",
     "test": "jest",
     "format-check": "prettier --check **/*.{ts,md,json}",
@@ -27,13 +27,15 @@
     "prepublishOnly": "yarn build"
   },
   "files": [
-    "dist"
+    "dist",
+    "tarballs"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@sketch-hq/sketch-lint-core": "./tarballs/sketch-lint-core-1.0.0.tgz"
+  },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
-    "@sketch-hq/sketch-lint-core": "./tarballs/sketch-lint-core-1.0.0.tgz",
     "@types/jest": "24.0.22",
     "@types/node": "12.12.7",
     "commitizen": "4.0.3",
@@ -47,8 +49,7 @@
     "typescript": "3.7.2",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "3.3.10",
-    "webpack-node-externals": "1.7.2"
+    "webpack-cli": "3.3.10"
   },
   "config": {
     "commitizen": {
