--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "sketch files",
     "rules only",
     "core rules",
-    "sketch assistants",
-    "assistants",
+    "sketch assistant",
+    "assistant",
     "design ops"
   ],
   "scripts": {
