--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: '12.6.0'
       - name: Install Dependencies
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile --ignore-scripts
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@master
         with:
