--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "test": "jest",
     "type-check": "tsc --noEmit"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@lingui/core": "2.9.1",
-    "@sketch-hq/sketch-assistant-utils": "2.0.2"
+    "@sketch-hq/sketch-file-format-ts": "4.0.2"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -44,6 +46,7 @@
     "@changesets/cli": "2.5.2",
     "@lingui/cli": "2.9.1",
     "@lingui/macro": "2.9.1",
+    "@sketch-hq/sketch-assistant-utils": "2.0.2",
     "@types/jest": "25.1.3",
     "@types/node": "13.7.7",
     "babel-core": "7.0.0-bridge.0",
