--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test": "jest",
     "type-check": "tsc --noEmit"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@lingui/core": "2.9.1"
   },
@@ -39,7 +41,6 @@
     "@lingui/cli": "2.9.1",
     "@lingui/macro": "2.9.1",
     "@sketch-hq/sketch-assistant-utils": "5.0.0-next.7",
-    "@sketch-hq/sketch-assistant-types": "3.0.0-next.5",
     "@types/jest": "25.2.1",
     "@types/node": "13.11.1",
     "babel-core": "7.0.0-bridge.0",
